test/error/missing_endmodule_2.sv
// pattern: missing expected `endmodule`
module foo;
module bar;
endmodule
